Fixed the issues pointed out

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -200,7 +200,7 @@ a {
 }
 
 .latest-div7 a {
-  bottom: 15px !important;
+  bottom: 15px;
   color: #f42;
   font-size: 11px;
   position: relative;
@@ -379,9 +379,9 @@ a {
   display: grid;
   gap: 25px;
   grid-template-columns: repeat(4, auto);
-  margin: 0 50px 0 10px !important;
+  margin: 0 50px 0 10px;
   position: relative;
-  width: 100vw !important;
+  width: 100vw;
 }
 
 #one-img {
@@ -400,7 +400,7 @@ a {
   padding-left: 10px;
   position: relative;
   top: 90px;
-  width: 96vw !important;
+  width: 96vw;
 }
 
 .right-art {
@@ -511,7 +511,7 @@ a {
   bottom: 50px;
   margin: 100px 0 0 0;
   position: relative;
-  width: 100vw !important;
+  width: 100vw;
 }
 
 .info h4 {
@@ -578,7 +578,7 @@ a {
   justify-content: space-between;
   padding-bottom: 20px;
   position: relative;
-  width: 100vw !important;
+  width: 100vw;
 }
 
 .funding-nav ul {
@@ -611,7 +611,7 @@ a {
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
   justify-content: center;
-  margin: 0 20px 0 20px !important;
+  margin: 0 20px 0 20px;
   position: relative;
   right: 20px;
   bottom: 80px;
@@ -1116,7 +1116,6 @@ a {
 .cont-main {
   display: grid;
   grid-template-rows: repeat(10, auto);
-  overflow-x: hidden;
   width: 100vw;
 }
 
@@ -1201,9 +1200,9 @@ a {
 }
 
 .eight-grids1 {
-  bottom: 60px !important;
+  bottom: 60px;
   position: relative;
-  right: 0 !important;
+  right: 0;
   width: 100vw;
 }
 
@@ -1225,6 +1224,12 @@ a {
 
 /* Big Screen */
 @media screen and (min-width: 1008px) {
+  html,
+  body {
+    overflow-x: hidden;
+    width: 100%;
+  }
+
   * {
     padding: 0;
     margin: 0;
@@ -1531,9 +1536,10 @@ a {
 
 /* Medium Screen */
 @media screen and (max-width: 1007px) and (min-width: 768px) {
+  html,
   body {
-    padding: 0;
-    width: 100vw;
+    overflow-x: hidden;
+    width: 100%;
   }
 
   article {
@@ -1675,7 +1681,7 @@ a {
   }
 
   .left-art {
-    height: 51.5vh;
+    height: 53.6vh;
     top: 5px;
     width: 65.5vw;
   }
@@ -1710,7 +1716,7 @@ a {
   }
 
   .eight-grids {
-    margin-top: 140px;
+    margin-top: 180px;
     margin-left: -5px;
   }
 
@@ -1849,8 +1855,8 @@ a {
 
   .funding-img-cont {
     bottom: 50px;
-    left: 20px;
-    margin: 0 0 0 40px;
+    left: 0;
+    margin: 0 0 0 30px;
     position: relative;
   }
 
@@ -2057,6 +2063,12 @@ a {
     width: 310px;
   }
 
+  .right-art {
+    position: relative;
+    right: 27px;
+    top: 5px;
+  }
+
   .info0 a {
     color: #f00;
     font-size: 20px;
@@ -2139,10 +2151,10 @@ a {
 /* Small Screen */
 
 @media screen and (max-width: 765px) {
+  html,
   body {
-    padding: 0;
-    width: 100vw;
-    min-width: 320px;
+    overflow-x: hidden;
+    width: 100%;
   }
 
   .top-header {
@@ -2289,7 +2301,7 @@ a {
     top: 10px;
     margin-left: 0;
     text-decoration: none;
-    width: 90vw !important;
+    width: 90vw;
     z-index: 0;
   }
 
@@ -2362,11 +2374,11 @@ a {
     font-size: 3vw;
     left: 20px;
     margin: 70px 0 0 0;
-    width: 100vw;
+    width: 90vw;
   }
 
   .stub-para {
-    width: 90vw !important;
+    width: 90vw;
   }
 
   .right-top-img {
@@ -2383,6 +2395,13 @@ a {
     font-size: 13px;
     margin-top: 20px;
     width: 100%;
+    left: 5px;
+  }
+
+  #sub-covid-19,
+  #stub-tweaks {
+    left: 0;
+    top: 10px;
   }
 
   .latest-div1 h4,
@@ -2464,8 +2483,15 @@ a {
     top: 0;
   }
 
+  .div-extra a {
+    bottom: 40px;
+    font-size: 14px;
+    position: relative;
+  }
+
   .div-extra h4 {
-    bottom: 30px;
+    bottom: 40px;
+    position: relative;
   }
 
   .micro-grav2 h4 {
@@ -2551,6 +2577,7 @@ a {
   }
 
   .eight-grids1 {
+    bottom: 100px;
     margin: 0 0 0 20px;
     z-index: 0;
   }
@@ -2570,7 +2597,7 @@ a {
     color: #f42;
     font-size: 0.7em;
     font-weight: 700;
-    margin-left: 0 !important;
+    margin-left: 0;
     position: relative;
     right: 5px;
   }
@@ -2581,24 +2608,34 @@ a {
   }
 
   .apps {
-    bottom: 150px;
+    bottom: 100px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    width: 100vw;
     margin: 0;
+    right: 0;
+    width: 100vw;
   }
 
   .reddit-div h4 {
+    bottom: 50px;
+    position: relative;
     width: 90%;
   }
 
-  .reddit-div h4,
-  .simpson h4 {
-    width: 400px;
+  .reddit-div small,
+  .simpson small {
+    font-size: 13px;
+    top: 0;
+  }
+
+  #mica-bow {
+    font-size: 13px;
   }
 
   .insight h4 {
+    bottom: 50px;
+    position: relative;
     width: 90%;
   }
 
@@ -2606,15 +2643,37 @@ a {
     font-size: 14px;
     color: #141414;
     margin-bottom: 10px;
-    width: 50vw;
+    width: 70vw;
   }
 
   .simpson h4 {
+    position: relative;
     width: 90%;
+    bottom: 50px;
   }
 
   .hacka h4 {
+    bottom: 50px;
+    position: relative;
     width: 95vw;
+  }
+
+  .wacom-div h4,
+  .iwatch small {
+    top: 90px;
+    width: 90vw;
+  }
+
+  .iwatch h4 {
+    bottom: 50px;
+    position: relative;
+    width: 90vw;
+  }
+
+  .creativity h4 {
+    position: relative;
+    bottom: 50px;
+    width: 90vw;
   }
 
   .apps-h1 h4 {
@@ -2627,7 +2686,6 @@ a {
   }
 
   .fb-class h4,
-  .fb-class h2,
   #apps-h1 h4,
   #apps-h4 h4,
   #apps-h5 h4,
@@ -2635,7 +2693,18 @@ a {
   #apps-h3 h4 {
     font-size: 1em;
     top: 30px;
-    width: 90vw !important;
+    width: 90vw;
+  }
+
+  #stub-pilots {
+    left: 0;
+    margin-top: 10px;
+    top: 0;
+  }
+
+  .fb-class h2 {
+    font-size: 1em;
+    top: 100px;
   }
 
   #apps-h1 h4,
@@ -2668,9 +2737,9 @@ a {
   }
 
   .borda {
-    border-left-width: 0 !important;
-    border-right-width: 0 !important;
-    padding-left: 0 !important;
+    border-left-width: 0;
+    border-right-width: 0;
+    padding-left: 0;
   }
 
   #fund-round {
@@ -2690,10 +2759,36 @@ a {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    margin: 0;
+    margin-left: 10px;
     overflow-x: hidden;
     position: relative;
     width: 100%;
+  }
+
+  #black-cinema {
+    bottom: 55px;
+  }
+
+  #paywell-chan {
+    bottom: 65px;
+  }
+
+  .reddit-div h2,
+  .simpson h2,
+  .wacom h2,
+  .creativity h2,
+  .hacka h2,
+  .insight h2,
+  .iwatch h2 {
+    font-size: 1em;
+    top: 60px;
+  }
+
+  .wacom small,
+  .creativity small,
+  .hacka small,
+  .insight small {
+    top: 110px;
   }
 
   .micro-grav1 {
@@ -2715,10 +2810,6 @@ a {
   .micro-grav1 img {
     height: 70px;
     width: 70px;
-  }
-
-  .info0 b {
-    display: none;
   }
 
   .micro-dw {
@@ -2809,15 +2900,28 @@ a {
   }
 
   .info0 {
+    align-items: center;
+    bottom: 60px;
     display: grid;
-    justify-content: space-between;
-    width: 40vw;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 20px;
+    position: relative;
+    width: 95vw;
   }
 
   .info0 a {
     color: #f00;
-    font-size: 20px;
-    margin-left: 15px !important;
+    font-size: 25px;
+    margin-left: 25px;
+    right: 0;
+    top: 10px;
+    width: 50vw;
+  }
+
+  .info0 b {
+    font-size: 12px;
+    font-weight: inherit;
+    top: 0;
   }
 
   .info0 a:hover {
@@ -2832,5 +2936,39 @@ a {
     font-size: 25px;
     font-weight: 700;
     text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .left-art-down h4 {
+    font-size: 15px;
+    width: 80vw;
+  }
+
+  .stub-para a {
+    font-size: 15px;
+    line-height: 10px;
+  }
+
+  .right-art-bottom h4,
+  .right-art-bottom a {
+    font-size: 15px;
+    font-weight: inherit;
+    top: 0;
+    width: 90vw;
+  }
+
+  .icon-cont,
+  .div-callum {
+    width: 88vw;
+  }
+
+  .funding-img-cont {
+    left: 5px;
+  }
+
+  .list-container {
+    font-size: 14px;
+    width: 94vw;
   }
 }
